--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -3,7 +3,7 @@
 
 name: Java CI with Maven
 
-on: [ push ]
+on: [push]
 
 jobs:
   calculate-version:
@@ -89,8 +89,8 @@ jobs:
       - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
-          java-version: '16'
-          distribution: 'temurin'
+          java-version: "16"
+          distribution: "temurin"
           cache: maven
       - name: Building version
         run: echo ${{ needs.calculate-version.outputs.version }}
@@ -130,16 +130,16 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: pbakpjatk/test-app:${{ needs.calculate-version.outputs.version }}
+          tags: jbrynhub/test-app:${{ needs.calculate-version.outputs.version }}
   trigger-deploy:
     runs-on: ubuntu-latest
-    needs: [ calculate-version, docker ]
+    needs: [calculate-version, docker]
     if: ${{ github.ref_type == 'branch' && github.ref_name == 'main' }}
     steps:
-    - name: Invoke 'Deploy' workflow
-      uses: benc-uk/workflow-dispatch@v1
-      with:
-        workflow: Deploy
-        repo: pbak-pjatk/test-deployment
-        token: ${{ secrets.CI_TOKEN }}
-        inputs: '{ "app": "test-app", "version": "${{ needs.calculate-version.outputs.version }}" }'
+      - name: Invoke 'Deploy' workflow
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: Deploy
+          repo: pbak-pjatk/test-deployment
+          token: ${{ secrets.CI_TOKEN }}
+          inputs: '{ "app": "test-app", "version": "${{ needs.calculate-version.outputs.version }}" }'
